# vortex-app

./: .gitignore  Cargo.toml  Dioxus.toml
.github/workflows/: ci.yml
assets/: main.css  tailwind.css
src/: file_util.rs  main.rs  vortex_file.rs
src/components/: array.rs  breadcrumb.rs  dtype.rs  mod.rs  sample_files.rs  stats.rs  table.rs
src/components/array_info/: alp.rs  bitpacked.rs  chunked.rs  constant.rs  dict.rs  frame_of_reference.rs  fsst.rs  mod.rs  runend.rs
