[package]
name = "vortex-app"
version = "0.1.0"
authors = ["Andrew Duffy <andreweduffy@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.9.0"
dioxus = { version = "0.6.0" }
dioxus-free-icons = { version = "0.9.0", features = ["hero-icons-solid"] }
humansize = "2.1.3"
reqwest = "0.12"

# Needed for running Vortex operations
vortex = { git = "https://github.com/spiraldb/vortex.git", rev = "1777c2f" }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

[profile.release]
opt-level = "z"
debug = false
lto = true
codegen-units = 1
panic = "abort"
strip = true
incremental = false
